@@ -1,3 +1,6 @@
+2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/subtransaction.hxx:
+ - Fixed broken example.  Thanks Chris Angelico.
 2011-11-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
  win32/INSTALL.txt, win32/mingw.mak.template:
  - Remove quotes that confused MinGW make.
